13.6.2009
  * When executing a block, the engine sets the special variable .__func to its
    contents. This lets anonymous functions recurse.
